# FF_INDOOR

./: .gitignore  .gitignore.swp  AGENTS.md  README.md  git.cmd.sh  交接说明.doc
AK37E_SDK_V1.05/: README.md  auto_build.sh  linux分区计算器.xlsx  编译说明.txt
AK37E_SDK_V1.05/rootfs/: rootfs_build.sh
AK37E_SDK_V1.05/upgrade/: Makefile  SAT_EPOS  SAT_FFOS  make_image.sh  partition_image.sh
FF_1070/: .gitignore  .gitignore.swp  EP_Liunx_10_14  Makefile  README.md  SRA_704MAHTOS  run.sh  修改日志.txt
FF_1070/common/: CMakeLists.txt  ConvertCalendar.c  audio_input.c  audio_output.c  avilib.c  gpio_ctrl.c  h264_decode.c  h264_encode.c  i2c_ctrl.c  irq.c  lv_msg_event.c  media_thumb.c  mjpeg_decode.c  mjpeg_encode.c  motion_detection.c  pwm_ctrl.c  ringplay.c  sysclock.c  uart_ctrl.c  user_file.c  user_standby.c  user_time.c  video_input.c  video_play.c  video_record.c  wifi_api.c
FF_1070/docs/: audio_door_gpio_default_low.md  call_ring_to_outdoor_ctrl_fix.md  camera_call_ring_answer_finish_fix.md
FF_1070/layout/: TP9950_720P_AHD_CFG  TP9950_AHD_1080P_CFG  TP9950_CVBS_CFG  gsm6502.h  gsm6505.c  intercom.c  intercom.h  intercom_crc.c  intercom_crc.h  intercom_interface.c  intercom_interface.h  intercom_service.c  intercom_timer.c  intercom_timer.h  language.c  language.h  layout_alarm_list.c  layout_bell.c  layout_call_camera.c  layout_call_list.c  layout_camera.c  layout_click.c  layout_common.c  layout_common.h  layout_cp_sd.c  layout_define.h  layout_delete_flash_photo.c  layout_door_ring.c  (+59 more)
PCB/: Logic0.sch  Logic1.sch  Logic2.sch  Logic3.sch  SAT-560E-ALN-0070HD-FF（25.12.18）.sch
(+2381 files in other folders)
